--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -4279,10 +4279,11 @@ Software:
     properties:
       Id:
         name: Id
-        description: "Identifier for the software package (see the [Consistency and uniqueness of identifiers]\
-        (SPEC_ROOT/modality-agnostic-files/provenance.md#consistency-and-uniqueness-of-identifiers) section).\
-        \
-        Corresponds to [JSON-LD `@id`](https://www.w3.org/TR/json-ld11/#syntax-tokens-and-keywords)."
+        description: |
+          Identifier for the software package (see the [Consistency and uniqueness of identifiers]
+          (SPEC_ROOT/modality-agnostic-files/provenance.md#consistency-and-uniqueness-of-identifiers) section).
+  
+          Corresponds to [JSON-LD `@id`](https://www.w3.org/TR/json-ld11/#syntax-tokens-and-keywords).
         type: string
         format: uri
       Label:
