--- a/src/schema/rules/sidecars/prov.yaml
+++ b/src/schema/rules/sidecars/prov.yaml
@@ -4,5 +4,5 @@ CommonProvenanceFields:
   fields:
     GeneratedBy__Id__File: optional
     SidecarGeneratedBy: optional
-    Digest__File: optional
+    Digest: optional
     Type__File: optional
