Add swi and minIP suffixes for susceptibility weighted imaging
Add support for susceptibility weighted images (swi) and minimum
intensity projections (minIP) as non-parametric anatomical MRI
suffixes.

Closes #1566

--- a/src/schema/objects/suffixes.yaml
+++ b/src/schema/objects/suffixes.yaml
@@ -727,6 +727,17 @@ meg:
   description: |
     Unprocessed MEG data stored in the native file format of the MEG instrument
     with which the data was collected.
+minIP:
+  value: minIP
+  display_name: Minimum intensity projection
+  description: |
+    In arbitrary units (arbitrary).
+    Minimum intensity projection is a post-processing technique
+    applied to susceptibility weighted images (SWI),
+    where the minimum intensity is projected across a slab
+    of a specified thickness
+    ([Haacke et al., 2004](https://doi.org/10.1002/mrm.20198)).
+  unit: arbitrary
 motion:
   value: motion
   display_name: Motion
@@ -881,6 +892,17 @@ svs:
   display_name: Single-voxel spectroscopy
   description: |
     MRS acquisitions where the detected MR signal is spatially localized to a single volume.
+swi:
+  value: swi
+  display_name: Susceptibility weighted image
+  description: |
+    In arbitrary units (arbitrary).
+    Susceptibility weighted imaging (SWI) is a contrast mechanism
+    that combines magnitude and phase information from gradient-echo
+    sequences to enhance the visibility of substances with magnetic
+    susceptibility different from surrounding tissues
+    ([Haacke et al., 2004](https://doi.org/10.1002/mrm.20198)).
+  unit: arbitrary
 trace:
   value: trace
   display_name: Trace-weighted diffusion image
