--- a/src/schema/rules/files/raw/anat.yaml
+++ b/src/schema/rules/files/raw/anat.yaml
@@ -53,6 +53,20 @@ parametric:
     $ref: meta.templates.raw.mri.entities
     task: optional
 
+swi:
+  suffixes:
+    - swi
+    - minIP
+  extensions:
+    - .nii.gz
+    - .nii
+    - .json
+  datatypes:
+    - anat
+  entities:
+    $ref: meta.templates.raw.mri.entities
+    task: optional
+
 defacemask:
   suffixes:
     - defacemask
