--- a/src/schema/rules/sidecars/mri.yaml
+++ b/src/schema/rules/sidecars/mri.yaml
@@ -356,14 +356,14 @@ MRIFlipAngleLookLockerTrue:
           You should define 'FlipAngle' for this file, in
           case of a LookLocker acquisition. 'FlipAngle' is the
           flip angle (FA) for the acquisition, specified in degrees.
-          Corresponds to: [DICOM Tag 0018, 1314](https://dicomlookup.com/dicomtags/(0018,1314)) `Flip Angle`. The data
-          type number may apply to files from any MRI modality concerned
-          with a single value for this field, or to the files in a file
-          collection where the value of this field is iterated using the
-          flip entity. The data type array provides a value for each volume
-          in a 4D dataset and should only be used when the volume timing is
-          critical for interpretation of the data, such as in ASL or
-          variable flip angle fMRI sequences.
+          Corresponds to [DICOM Tag 0018, 1314](https://dicomlookup.com/dicomtags/(0018,1314)) `Flip Angle`.
+          The data type number may apply to files from any MRI modality
+          concerned with a single value for this field,
+          or to the files in a file collection where the value of this field
+          is iterated using the flip entity.
+          The data type array provides a value for each volume in a 4D dataset and
+          should only be used when the volume timing is critical for interpretation of the data,
+          such as in ASL or variable flip angle fMRI sequences.
 
 MRISliceAcceleration:
   selectors:
