[DATALAD RUNCMD] sed -i -e '/\[DICOM/s/^\( *\)\([a-zA-Z]....
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "sed -i -e '/\\[DICOM/s/^\\( *\\)\\([a-zA-Z].*\\) `/\\1\\2\\n\\1`/' src/schema/objects/metadata.yaml src/schema/rules/checks/asl.yaml src/schema/rules/sidecars/mri.yaml src/schema/rules/sidecars/mrs.yaml src/schema/rules/sidecars/pet.yaml",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/src/schema/rules/sidecars/mri.yaml
+++ b/src/schema/rules/sidecars/mri.yaml
@@ -14,23 +14,28 @@ MRIHardware:
     Manufacturer:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0008, 0070](https://dicomlookup.com/dicomtags/(0008,0070)) `Manufacturer`.
+        Corresponds to [DICOM Tag 0008, 0070](https://dicomlookup.com/dicomtags/(0008,0070))
+        `Manufacturer`.
     ManufacturersModelName:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0008, 1090](https://dicomlookup.com/dicomtags/(0008,1090)) `Manufacturers Model Name`.
+        Corresponds to [DICOM Tag 0008, 1090](https://dicomlookup.com/dicomtags/(0008,1090))
+        `Manufacturers Model Name`.
     DeviceSerialNumber:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0018, 1000](https://dicomlookup.com/dicomtags/(0018,1000)) `DeviceSerialNumber`.
+        Corresponds to [DICOM Tag 0018, 1000](https://dicomlookup.com/dicomtags/(0018,1000))
+        `DeviceSerialNumber`.
     StationName:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0008, 1010](https://dicomlookup.com/dicomtags/(0008,1010)) `Station Name`.
+        Corresponds to [DICOM Tag 0008, 1010](https://dicomlookup.com/dicomtags/(0008,1010))
+        `Station Name`.
     SoftwareVersions:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0018, 1020](https://dicomlookup.com/dicomtags/(0018,1020)) `Software Versions`.
+        Corresponds to [DICOM Tag 0018, 1020](https://dicomlookup.com/dicomtags/(0018,1020))
+        `Software Versions`.
     HardcopyDeviceSoftwareVersion: deprecated
     MagneticFieldStrength:
       level: recommended
@@ -68,7 +73,8 @@ MRISample:
     BodyPart:
       level: optional
       description_addendum: |
-        Corresponds to [DICOM Tag 0018, 0015](https://dicomlookup.com/dicomtags/(0018,0015)) `Body Part Examined`.
+        Corresponds to [DICOM Tag 0018, 0015](https://dicomlookup.com/dicomtags/(0018,0015))
+        `Body Part Examined`.
     BodyPartDetails: optional
     BodyPartDetailsOntology: optional
 
@@ -94,7 +100,8 @@ MRISequenceSpecifics:
     ScanningSequence:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0018, 0020](https://dicomlookup.com/dicomtags/(0018,0020)) `Scanning Sequence`.
+        Corresponds to [DICOM Tag 0018, 0020](https://dicomlookup.com/dicomtags/(0018,0020))
+        `Scanning Sequence`.
     SequenceVariant: recommended
     ScanOptions: optional
     SequenceName: recommended
@@ -356,7 +363,8 @@ MRIFlipAngleLookLockerTrue:
           You should define 'FlipAngle' for this file, in
           case of a LookLocker acquisition. 'FlipAngle' is the
           flip angle (FA) for the acquisition, specified in degrees.
-          Corresponds to [DICOM Tag 0018, 1314](https://dicomlookup.com/dicomtags/(0018,1314)) `Flip Angle`.
+          Corresponds to [DICOM Tag 0018, 1314](https://dicomlookup.com/dicomtags/(0018,1314))
+          `Flip Angle`.
           The data type number may apply to files from any MRI modality
           concerned with a single value for this field,
           or to the files in a file collection where the value of this field
@@ -406,11 +414,13 @@ MRIInstitutionInformation:
     InstitutionName:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0008, 0080](https://dicomlookup.com/dicomtags/(0008,0080)) `InstitutionName`.
+        Corresponds to [DICOM Tag 0008, 0080](https://dicomlookup.com/dicomtags/(0008,0080))
+        `InstitutionName`.
     InstitutionAddress:
       level: recommended
       description_addendum: |
-        Corresponds to [DICOM Tag 0008, 0081](https://dicomlookup.com/dicomtags/(0008,0081)) `InstitutionAddress`.
+        Corresponds to [DICOM Tag 0008, 0081](https://dicomlookup.com/dicomtags/(0008,0081))
+        `InstitutionAddress`.
     InstitutionalDepartmentName:
       level: recommended
       description_addendum: |
@@ -425,7 +435,8 @@ DeidentificationMethod:
     DeidentificationMethod:
       level: optional
       description_addendum: |
-        Corresponds to [DICOM Tag 0012, 0063](https://dicomlookup.com/dicomtags/(0012,0063)) `De-identification Method`.
+        Corresponds to [DICOM Tag 0012, 0063](https://dicomlookup.com/dicomtags/(0012,0063))
+        `De-identification Method`.
     DeidentificationMethodCodeSequence:
       level: optional
       description_addendum: |
