--- a/src/schema/rules/sidecars/mrs.yaml
+++ b/src/schema/rules/sidecars/mrs.yaml
@@ -40,7 +40,8 @@ MRSSample:
       level: optional
       level_addendum: required if `voi` entity is present
       description_addendum: |
-        Corresponds to [DICOM Tag 0018, 0015](https://dicomlookup.com/dicomtags/(0018,0015)) `Body Part Examined`.
+        Corresponds to [DICOM Tag 0018, 0015](https://dicomlookup.com/dicomtags/(0018,0015))
+        `Body Part Examined`.
     BodyPartDetails:
       level: optional
       level_addendum: required if `voi` entity is present
